Adjusted hyperparameter for Delta DAGMM with CIFAR10.

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  no_detection\n",
-      "Selected 0 malicious clients out of 100\n",
-      "Malicious client IDs: []\n",
-      "num_gpus:  0.041666666666666664\n"
+      "Using the detection method:  delta_dagmm\n",
+      "Selected 3 malicious clients out of 10\n",
+      "Malicious client IDs: [0, 1, 4]\n",
+      "num_gpus:  0.1\n"
      ]
     }
    ],
@@ -46,25 +46,25 @@
     "DATASET = DatasetNames.cifar10\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 100\n",
+    "NUM_CLIENTS = 10\n",
     "\n",
     "# Number of federation rounds. Use 20 for everything except for CIFAR10 with 100 clients, where we use 40\n",
     "NUM_ROUNDS = 20 if DATASET == DatasetNames.mnist or (DATASET == DatasetNames.cifar10 and NUM_CLIENTS == 10) else 40\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.0\n",
+    "PERCENT_MALICIOUS = 0.3\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
     "\n",
     "# If true, plots about the loss and accuracy will be generated on wandb.\n",
-    "USE_WANDB = True\n",
+    "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.no_attack\n",
+    "ATTACK_METHOD = AttackNames.random_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.no_detection\n",
+    "DETECTION_METHOD = DetectionNames.delta_dagmm_detection\n",
     "\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
@@ -110,7 +110,7 @@
     "\n",
     "    model_path = \"./dagmm/delta_dagmm/models/\" + DATASET.value + \"/\" + str(NUM_CLIENTS)\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_threshold_path\"] = model_path + \"/dagmm_anomaly_threshold.yaml\"\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 2   # Does not perform the detection in the first x round(s). This is important for Delta-DAGMM since especially in the first iteration, the global model is randomly initialized by the server. Thus it is good to skip it.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_ignore_up_to\"] = 8 if NUM_CLIENTS == 100 and DATASET == DatasetNames.cifar10 else 2   # Does not perform the detection in the first x round(s). This is important for Delta-DAGMM since especially in the first iteration, the global model is randomly initialized by the server. Thus it is good to skip it.\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_model_path\"] =  model_path + \"/model.pt\"\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"dagmm_hyperparameters_path\"] = model_path + \"/dagmm_hyperparameters.yaml\"\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"gmm_parameters_paths\"] = {\n",
