Added bash scripts for performing comparison and control runs. Updated evaluation script.

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  delta_dagmm\n",
-      "Selected 3 malicious clients out of 10\n",
-      "Malicious client IDs: [0, 1, 4]\n",
-      "num_gpus:  0.1\n"
+      "Using the detection method:  no_detection\n",
+      "Selected 30 malicious clients out of 100\n",
+      "Malicious client IDs: [0, 3, 4, 11, 13, 14, 17, 25, 27, 28, 29, 31, 35, 53, 54, 57, 64, 69, 71, 75, 77, 81, 84, 86, 88, 89, 93, 94, 95, 97]\n",
+      "num_gpus:  0.041666666666666664\n"
      ]
     }
    ],
@@ -43,10 +43,10 @@
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "\n",
     "# Dataset (mnist or cifar10)\n",
-    "DATASET = DatasetNames.cifar10\n",
+    "DATASET = DatasetNames.mnist\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 10\n",
+    "NUM_CLIENTS = 100\n",
     "\n",
     "# Number of federation rounds. Use 20 for everything except for CIFAR10 with 100 clients, where we use 40\n",
     "NUM_ROUNDS = 20 if DATASET == DatasetNames.mnist or (DATASET == DatasetNames.cifar10 and NUM_CLIENTS == 10) else 40\n",
@@ -61,10 +61,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.random_weights_attack\n",
+    "ATTACK_METHOD = AttackNames.adaptive_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.delta_dagmm_detection\n",
+    "DETECTION_METHOD = DetectionNames.no_detection\n",
     "\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
