Adjusted hyperparameter for FGFL with CIFAR10.

--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "100740f5",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "8645afb7",
    "metadata": {},
    "outputs": [
@@ -365,29 +365,52 @@
       "mnist--n=10--0%--no_attack--delta_dagmm:\n",
       " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.548964019616445, 'Final_acc_avg': 0.9870666666666666} \n",
       "\n",
-      "mnist--n=100--0%--no_attack--delta_dagmm:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 2.6666666666666665, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.217063069343567, 'Final_acc_avg': 0.9319333333333333} \n",
-      "\n",
       "mnist--n=10--0%--no_attack--rffl:\n",
       " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.5710649013519284, 'Final_acc_avg': 0.9859666666666667} \n",
-      "\n",
-      "mnist--n=100--0%--no_attack--rffl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2104353388150533, 'Final_acc_avg': 0.9303666666666667} \n",
       "\n",
       "mnist--n=10--0%--no_attack--fgfl:\n",
       " {'TP_avg': 0.0, 'FP_avg': 5.333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.0891584475835163, 'Final_acc_avg': 0.9835666666666666} \n",
       "\n",
-      "mnist--n=100--0%--no_attack--fgfl:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 24.333333333333332, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 2.8988393584887184, 'Final_acc_avg': 0.9293999999999999} \n",
-      "\n",
       "mnist--n=10--0%--no_attack--viceroy:\n",
       " {'TP_avg': 0.0, 'FP_avg': 1.3333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.3865855216979983, 'Final_acc_avg': 0.9852666666666666} \n",
       "\n",
-      "mnist--n=100--0%--no_attack--viceroy:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 34.666666666666664, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2742070396741227, 'Final_acc_avg': 0.9293666666666667} \n",
-      "\n",
       "mnist--n=10--0%--no_attack--wef:\n",
       " {'TP_avg': 0.0, 'FP_avg': 4.666666666666667, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.52182967265447, 'Final_acc_avg': 0.9857333333333332} \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = DatasetNames.mnist\n",
+    "n_clients = [10]\n",
+    "perc_malicious = [0]\n",
+    "attacks = [AttackNames.no_attack]\n",
+    "detections = [DetectionNames.delta_dagmm_detection, DetectionNames.rffl_detection, DetectionNames.fgfl_detection, DetectionNames.viceroy_detection, DetectionNames.wef_detection]\n",
+    "\n",
+    "results = get_experiment_results(dataset, n_clients, perc_malicious, attacks, detections)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d7e68a90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mnist--n=100--0%--no_attack--delta_dagmm:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 2.6666666666666665, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.217063069343567, 'Final_acc_avg': 0.9319333333333333} \n",
+      "\n",
+      "mnist--n=100--0%--no_attack--rffl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2104353388150533, 'Final_acc_avg': 0.9303666666666667} \n",
+      "\n",
+      "mnist--n=100--0%--no_attack--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 24.333333333333332, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 2.8988393584887184, 'Final_acc_avg': 0.9293999999999999} \n",
+      "\n",
+      "mnist--n=100--0%--no_attack--viceroy:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 34.666666666666664, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2742070396741227, 'Final_acc_avg': 0.9293666666666667} \n",
       "\n",
       "mnist--n=100--0%--no_attack--wef:\n",
       " {'TP_avg': 0.0, 'FP_avg': 16.333333333333332, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 3.2607705354690553, 'Final_acc_avg': 0.9317666666666667} \n",
@@ -397,7 +420,7 @@
    ],
    "source": [
     "dataset = DatasetNames.mnist\n",
-    "n_clients = [10, 100]\n",
+    "n_clients = [100]\n",
     "perc_malicious = [0]\n",
     "attacks = [AttackNames.no_attack]\n",
     "detections = [DetectionNames.delta_dagmm_detection, DetectionNames.rffl_detection, DetectionNames.fgfl_detection, DetectionNames.viceroy_detection, DetectionNames.wef_detection]\n",
@@ -421,7 +444,23 @@
    "outputs": [],
    "source": [
     "dataset = DatasetNames.cifar10\n",
-    "n_clients = [10, 100]\n",
+    "n_clients = [10]\n",
+    "perc_malicious = [0]\n",
+    "attacks = [AttackNames.no_attack]\n",
+    "detections = [DetectionNames.delta_dagmm_detection, DetectionNames.rffl_detection, DetectionNames.fgfl_detection, DetectionNames.viceroy_detection, DetectionNames.wef_detection]\n",
+    "\n",
+    "results = get_experiment_results(dataset, n_clients, perc_malicious, attacks, detections)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7f975f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = DatasetNames.cifar10\n",
+    "n_clients = [100]\n",
     "perc_malicious = [0]\n",
     "attacks = [AttackNames.no_attack]\n",
     "detections = [DetectionNames.delta_dagmm_detection, DetectionNames.rffl_detection, DetectionNames.fgfl_detection, DetectionNames.viceroy_detection, DetectionNames.wef_detection]\n",
