--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,9 +23,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  no_detection\n",
-      "Selected 30 malicious clients out of 100\n",
-      "Malicious client IDs: [0, 3, 4, 11, 13, 14, 17, 25, 27, 28, 29, 31, 35, 53, 54, 57, 64, 69, 71, 75, 77, 81, 84, 86, 88, 89, 93, 94, 95, 97]\n",
+      "Using the detection method:  fgfl\n",
+      "Selected 10 malicious clients out of 100\n",
+      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
       "num_gpus:  0.041666666666666664\n"
      ]
     }
@@ -43,7 +43,7 @@
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "\n",
     "# Dataset (mnist or cifar10)\n",
-    "DATASET = DatasetNames.mnist\n",
+    "DATASET = DatasetNames.cifar10\n",
     "\n",
     "# Number of clients\n",
     "NUM_CLIENTS = 100\n",
@@ -52,7 +52,7 @@
     "NUM_ROUNDS = 20 if DATASET == DatasetNames.mnist or (DATASET == DatasetNames.cifar10 and NUM_CLIENTS == 10) else 40\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.3\n",
+    "PERCENT_MALICIOUS = 0.1\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
@@ -61,10 +61,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.adaptive_attack\n",
+    "ATTACK_METHOD = AttackNames.random_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.no_detection\n",
+    "DETECTION_METHOD = DetectionNames.fgfl_detection\n",
     "\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
@@ -125,7 +125,7 @@
     "    ADDITIONAL_DETECTION_CONFIG[\"gamma\"] = 0.5 if DATASET.value == \"mnist\" else 0.15  # 0.5 for MNIST and 0.15 for CIFAR10 specified by the authors\n",
     "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.fgfl_detection.value:\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"stds\"] = 2.1    # The amount of standard deviations to substract from the mean. Higher -> higher precision, lower recall. Lower -> lower precision, higher recall\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"stds\"] = 2.1 if DATASET.value == DatasetNames.mnist.value else 2.8  # The amount of standard deviations to substract from the mean. Higher -> higher precision, lower recall. Lower -> lower precision, higher recall\n",
     "# ________________________________________________________________________________________________________________________________________________\n",
     "elif DETECTION_METHOD.value == DetectionNames.fdfl_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"tau\"] = 0.4    # If the cosine similarity of two submitted data distributions for two clients of the same cluster is smaller than tau,\n",
