Improved Viveroy implementation to be much more efficient. Now stopping an experiment if only 1 client is left because the framework cannot handle it.

--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,10 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  fgfl\n",
-      "Selected 10 malicious clients out of 100\n",
-      "Malicious client IDs: [3, 13, 14, 17, 28, 31, 35, 81, 86, 94]\n",
-      "num_gpus:  0.041666666666666664\n"
+      "Using the detection method:  viceroy\n",
+      "Selected 1 malicious clients out of 10\n",
+      "Malicious client IDs: [1]\n",
+      "num_gpus:  0.1\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
     "DATASET = DatasetNames.cifar10\n",
     "\n",
     "# Number of clients\n",
-    "NUM_CLIENTS = 100\n",
+    "NUM_CLIENTS = 10\n",
     "\n",
     "# Number of federation rounds. Use 20 for everything except for CIFAR10 with 100 clients, where we use 40\n",
     "NUM_ROUNDS = 20 if DATASET == DatasetNames.mnist or (DATASET == DatasetNames.cifar10 and NUM_CLIENTS == 10) else 40\n",
@@ -64,7 +64,7 @@
     "ATTACK_METHOD = AttackNames.random_weights_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.fgfl_detection\n",
+    "DETECTION_METHOD = DetectionNames.viceroy_detection\n",
     "\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
@@ -138,11 +138,11 @@
     "elif DETECTION_METHOD.value == DetectionNames.viceroy_detection.value:\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"omega\"] = 0.525    # History decay factor (value taken from the paper)\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"eta\"] = 0.2        # Reputation update factor (value taken from the paper)\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"kappa\"] = 0.5      # Confidence parameter of FoolsGold.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"kappa\"] = 0.5 if DATASET.value == DatasetNames.mnist.value else 0.8      # Confidence parameter of FoolsGold.\n",
     "    ADDITIONAL_DETECTION_CONFIG[\"skip_first_round\"] = True  # Specify if the first round should be skipped. \n",
     "                                                            # This is a good practice since the initial global model is randomly initialized.\n",
     "                                                            # Thus, the gradient calculation can be messy.\n",
-    "    ADDITIONAL_DETECTION_CONFIG[\"free_rider_threshold\"] = 0.1   # Specify the threshold that separates benign clients from free riders.\n",
+    "    ADDITIONAL_DETECTION_CONFIG[\"free_rider_threshold\"] = 0.1 if DATASET.value == DatasetNames.mnist.value else 0.05   # Specify the threshold that separates benign clients from free riders.\n",
     "                                                                # The values it is compared to range from 0 to 1, where 0 denotes a very suspicious client\n",
     "                                                                # and 1 a very unsuspicious one.\n",
     "# ________________________________________________________________________________________________________________________________________________\n",
