--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -1212,6 +1212,236 @@
     "\n",
     "results = get_experiment_results(dataset, n_clients, perc_malicious, attacks, detections)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebff44f2",
+   "metadata": {},
+   "source": [
+    "#### FGFL detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "14c6fe60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cifar10--n=10--10%--random_weights--fgfl:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 0.3333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.8333333333333334, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.46067792821126713, 'Time_per_iteration_avg': 16.10825476249059, 'Final_acc_avg': 0.8065666666666668} \n",
+      "\n",
+      "cifar10--n=10--10%--advanced_delta_weights--fgfl:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 1.0, 'FN_avg': 0.0, 'Precision_avg': 0.611111111111111, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.5303272355136676, 'Time_per_iteration_avg': 16.259436865647633, 'Final_acc_avg': 0.7948000000000001} \n",
+      "\n",
+      "cifar10--n=10--10%--advanced_free_rider--fgfl:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 0.3333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.8333333333333334, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.5282728702815435, 'Time_per_iteration_avg': 15.934076273441315, 'Final_acc_avg': 0.7995333333333333} \n",
+      "\n",
+      "cifar10--n=10--10%--adaptive--fgfl:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 0.6666666666666666, 'FN_avg': 0.0, 'Precision_avg': 0.6666666666666666, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.5183082099808575, 'Time_per_iteration_avg': 15.904377532005311, 'Final_acc_avg': 0.7935666666666666} \n",
+      "\n",
+      "cifar10--n=10--30%--random_weights--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 1.0, 'FN_avg': 3.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 11.68899599313736, 'Final_acc_avg': 0.11886666666666666} \n",
+      "\n",
+      "cifar10--n=10--30%--advanced_delta_weights--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 3.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 14.392469175656636, 'Final_acc_avg': 0.7812666666666667} \n",
+      "\n",
+      "cifar10--n=10--30%--advanced_free_rider--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 3.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 14.695278859138488, 'Final_acc_avg': 0.6685} \n",
+      "\n",
+      "cifar10--n=10--30%--adaptive--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.3333333333333333, 'FN_avg': 3.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 14.99128923813502, 'Final_acc_avg': 0.7834} \n",
+      "\n",
+      "cifar10--n=10--70%--random_weights--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 3.0, 'FN_avg': 7.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 6.198888206481933, 'Final_acc_avg': 0.10000000000000002} \n",
+      "\n",
+      "cifar10--n=10--70%--advanced_delta_weights--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 1.0, 'FN_avg': 7.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 8.759331544240316, 'Final_acc_avg': 0.6098} \n",
+      "\n",
+      "cifar10--n=10--70%--advanced_free_rider--fgfl:\n",
+      " {'FAILED!'} \n",
+      "\n",
+      "cifar10--n=10--70%--adaptive--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 1.0, 'FN_avg': 7.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 10.549378021558125, 'Final_acc_avg': 0.6058666666666667} \n",
+      "\n",
+      "cifar10--n=100--10%--random_weights--fgfl:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 18.0, 'FN_avg': 0.0, 'Precision_avg': 0.3593869731800767, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8071340074609706, 'Time_per_iteration_avg': 18.28924723863602, 'Final_acc_avg': 0.7573333333333334} \n",
+      "\n",
+      "cifar10--n=100--10%--advanced_delta_weights--fgfl:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 14.666666666666666, 'FN_avg': 0.0, 'Precision_avg': 0.4055555555555556, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8277580180400469, 'Time_per_iteration_avg': 18.882069538036983, 'Final_acc_avg': 0.7009} \n",
+      "\n",
+      "cifar10--n=100--10%--advanced_free_rider--fgfl:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 15.0, 'FN_avg': 0.0, 'Precision_avg': 0.4012345679012346, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8325721087266853, 'Time_per_iteration_avg': 19.199626078208286, 'Final_acc_avg': 0.7056666666666667} \n",
+      "\n",
+      "cifar10--n=100--10%--adaptive--fgfl:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 15.0, 'FN_avg': 0.0, 'Precision_avg': 0.4004273504273505, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8354672286930455, 'Time_per_iteration_avg': 19.04248019059499, 'Final_acc_avg': 0.7039} \n",
+      "\n",
+      "cifar10--n=100--30%--random_weights--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 6.0, 'FN_avg': 30.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 17.68599909543991, 'Final_acc_avg': 0.12633333333333333} \n",
+      "\n",
+      "cifar10--n=100--30%--advanced_delta_weights--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 5.333333333333333, 'FN_avg': 30.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 20.632046155134837, 'Final_acc_avg': 0.7019666666666667} \n",
+      "\n",
+      "cifar10--n=100--30%--advanced_free_rider--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 2.6666666666666665, 'FN_avg': 30.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 25.595844397942226, 'Final_acc_avg': 0.1073} \n",
+      "\n",
+      "cifar10--n=100--30%--adaptive--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 3.0, 'FN_avg': 30.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 29.281173358360927, 'Final_acc_avg': 0.7013666666666666} \n",
+      "\n",
+      "cifar10--n=100--70%--random_weights--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 30.0, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 10.066127189000447, 'Final_acc_avg': 0.10000000000000002} \n",
+      "\n",
+      "cifar10--n=100--70%--advanced_delta_weights--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 4.0, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 18.49923279484113, 'Final_acc_avg': 0.6585} \n",
+      "\n",
+      "cifar10--n=100--70%--advanced_free_rider--fgfl:\n",
+      " {'FAILED!'} \n",
+      "\n",
+      "cifar10--n=100--70%--adaptive--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 4.0, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 39.52259967923164, 'Final_acc_avg': 0.6576000000000001} \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = DatasetNames.cifar10\n",
+    "n_clients = [10, 100]\n",
+    "perc_malicious = [10, 30, 70]\n",
+    "attacks = [AttackNames.random_weights_attack, AttackNames.advanced_delta_weights_attack, AttackNames.advanced_free_rider_attack, AttackNames.adaptive_attack]\n",
+    "detections = [DetectionNames.fgfl_detection]\n",
+    "\n",
+    "results = get_experiment_results(dataset, n_clients, perc_malicious, attacks, detections)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fbec6ad",
+   "metadata": {},
+   "source": [
+    "#### Viceroy detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "eb1fe51f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cifar10--n=10--10%--random_weights--viceroy:\n",
+      " {'FAILED!'} \n",
+      "\n",
+      "cifar10--n=10--10%--advanced_delta_weights--viceroy:\n",
+      " {'TP_avg': 0.3333333333333333, 'FP_avg': 1.0, 'FN_avg': 0.6666666666666666, 'Precision_avg': 0.16666666666666666, 'Recall_avg': 0.3333333333333333, 'Effectiveness_avg': 0.06879381194102004, 'Time_per_iteration_avg': 16.623489622275034, 'Final_acc_avg': 0.7963} \n",
+      "\n",
+      "cifar10--n=10--10%--advanced_free_rider--viceroy:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.6666666666666666, 'FN_avg': 1.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 16.817859466870626, 'Final_acc_avg': 0.7957333333333333} \n",
+      "\n",
+      "cifar10--n=10--10%--adaptive--viceroy:\n",
+      " {'TP_avg': 0.6666666666666666, 'FP_avg': 0.0, 'FN_avg': 0.3333333333333333, 'Precision_avg': 0.6666666666666666, 'Recall_avg': 0.6666666666666666, 'Effectiveness_avg': 0.11127515980984293, 'Time_per_iteration_avg': 17.39697668949763, 'Final_acc_avg': 0.8048666666666667} \n",
+      "\n",
+      "cifar10--n=10--30%--random_weights--viceroy:\n",
+      " {'TP_avg': 3.0, 'FP_avg': 2.6666666666666665, 'FN_avg': 0.0, 'Precision_avg': 0.5428571428571428, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.42654131819858954, 'Time_per_iteration_avg': 10.929887398084006, 'Final_acc_avg': 0.7447333333333334} \n",
+      "\n",
+      "cifar10--n=10--30%--advanced_delta_weights--viceroy:\n",
+      " {'TP_avg': 3.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.6012356981175556, 'Time_per_iteration_avg': 14.538497440020244, 'Final_acc_avg': 0.7850333333333334} \n",
+      "\n",
+      "cifar10--n=10--30%--advanced_free_rider--viceroy:\n",
+      " {'TP_avg': 3.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.6027912723748942, 'Time_per_iteration_avg': 14.583130458990732, 'Final_acc_avg': 0.7847} \n",
+      "\n",
+      "cifar10--n=10--30%--adaptive--viceroy:\n",
+      " {'TP_avg': 3.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.6102267086241819, 'Time_per_iteration_avg': 15.068938358624777, 'Final_acc_avg': 0.7868333333333334} \n",
+      "\n",
+      "cifar10--n=10--70%--random_weights--viceroy:\n",
+      " {'FAILED!'} \n",
+      "\n",
+      "cifar10--n=10--70%--advanced_delta_weights--viceroy:\n",
+      " {'TP_avg': 7.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.7877672809836666, 'Time_per_iteration_avg': 10.47009952068329, 'Final_acc_avg': 0.7147333333333333} \n",
+      "\n",
+      "cifar10--n=10--70%--advanced_free_rider--viceroy:\n",
+      " {'TP_avg': 7.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.7903074065149234, 'Time_per_iteration_avg': 10.467879633108774, 'Final_acc_avg': 0.7144} \n",
+      "\n",
+      "cifar10--n=10--70%--adaptive--viceroy:\n",
+      " {'TP_avg': 7.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.7993817679348534, 'Time_per_iteration_avg': 10.862726012865702, 'Final_acc_avg': 0.7119} \n",
+      "\n",
+      "cifar10--n=100--10%--random_weights--viceroy:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 45.0, 'FN_avg': 0.0, 'Precision_avg': 0.18835978835978837, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.7953039710655178, 'Time_per_iteration_avg': 18.777731476227444, 'Final_acc_avg': 0.7302333333333334} \n",
+      "\n",
+      "cifar10--n=100--10%--advanced_delta_weights--viceroy:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 0.3333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.9696969696969697, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8328586726546411, 'Time_per_iteration_avg': 31.900535883506137, 'Final_acc_avg': 0.7111333333333333} \n",
+      "\n",
+      "cifar10--n=100--10%--advanced_free_rider--viceroy:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 0.3333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.9696969696969697, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.835822189871941, 'Time_per_iteration_avg': 32.74083577593168, 'Final_acc_avg': 0.7079} \n",
+      "\n",
+      "cifar10--n=100--10%--adaptive--viceroy:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 0.6666666666666666, 'FN_avg': 0.0, 'Precision_avg': 0.9444444444444445, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8281693982322779, 'Time_per_iteration_avg': 33.71213163932165, 'Final_acc_avg': 0.7105333333333334} \n",
+      "\n",
+      "cifar10--n=100--30%--random_weights--viceroy:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 60.0, 'FN_avg': 0.0, 'Precision_avg': 0.33493411290745967, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.7329862846128963, 'Time_per_iteration_avg': 8.643008305629094, 'Final_acc_avg': 0.6390333333333333} \n",
+      "\n",
+      "cifar10--n=100--30%--advanced_delta_weights--viceroy:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8723608080487696, 'Time_per_iteration_avg': 25.333409786224365, 'Final_acc_avg': 0.7012} \n",
+      "\n",
+      "cifar10--n=100--30%--advanced_free_rider--viceroy:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8611915491515362, 'Time_per_iteration_avg': 24.699453326066333, 'Final_acc_avg': 0.7042666666666667} \n",
+      "\n",
+      "cifar10--n=100--30%--adaptive--viceroy:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 0.3333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.989247311827957, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8708205033316023, 'Time_per_iteration_avg': 26.58736451268196, 'Final_acc_avg': 0.7044} \n",
+      "\n",
+      "cifar10--n=100--70%--random_weights--viceroy:\n",
+      " {'TP_avg': 70.0, 'FP_avg': 18.333333333333332, 'FN_avg': 0.0, 'Precision_avg': 0.7940545837335429, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.7662181703864741, 'Time_per_iteration_avg': 10.224735681215922, 'Final_acc_avg': 0.6741333333333334} \n",
+      "\n",
+      "cifar10--n=100--70%--advanced_delta_weights--viceroy:\n",
+      " {'TP_avg': 70.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.943734372100984, 'Time_per_iteration_avg': 13.726235131422678, 'Final_acc_avg': 0.6789333333333333} \n",
+      "\n",
+      "cifar10--n=100--70%--advanced_free_rider--viceroy:\n",
+      " {'TP_avg': 70.0, 'FP_avg': 0.6666666666666666, 'FN_avg': 0.0, 'Precision_avg': 0.9907407407407408, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.9437031046483487, 'Time_per_iteration_avg': 13.587214960654578, 'Final_acc_avg': 0.6771666666666668} \n",
+      "\n",
+      "cifar10--n=100--70%--adaptive--viceroy:\n",
+      " {'TP_avg': 70.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.9428716356707735, 'Time_per_iteration_avg': 15.264127163092295, 'Final_acc_avg': 0.6770333333333333} \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = DatasetNames.cifar10\n",
+    "n_clients = [10, 100]\n",
+    "perc_malicious = [10, 30, 70]\n",
+    "attacks = [AttackNames.random_weights_attack, AttackNames.advanced_delta_weights_attack, AttackNames.advanced_free_rider_attack, AttackNames.adaptive_attack]\n",
+    "detections = [DetectionNames.viceroy_detection]\n",
+    "\n",
+    "results = get_experiment_results(dataset, n_clients, perc_malicious, attacks, detections)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3435e7d",
+   "metadata": {},
+   "source": [
+    "#### WEF detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18212a55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = DatasetNames.cifar10\n",
+    "n_clients = [10, 100]\n",
+    "perc_malicious = [10, 30, 70]\n",
+    "attacks = [AttackNames.random_weights_attack, AttackNames.advanced_delta_weights_attack, AttackNames.advanced_free_rider_attack, AttackNames.adaptive_attack]\n",
+    "detections = [DetectionNames.wef_detection]\n",
+    "\n",
+    "results = get_experiment_results(dataset, n_clients, perc_malicious, attacks, detections)"
+   ]
   }
  ],
  "metadata": {
