--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "223f5271",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
       " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 17.44803235133489, 'Final_acc_avg': 0.8077666666666667} \n",
       "\n",
       "cifar10--n=100--0%--no_attack--no_detection:\n",
-      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 22.264522767066953, 'Final_acc_avg': 0.6450666666666667} \n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 21.992423649628957, 'Final_acc_avg': 0.7122} \n",
       "\n"
      ]
     }
@@ -322,10 +322,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "15a78e90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cifar10--n=10--30%--random_weights--no_detection:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 3.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 13.69570397933324, 'Final_acc_avg': 0.16206666666666666} \n",
+      "\n",
+      "cifar10--n=10--30%--advanced_delta_weights--no_detection:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 3.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 14.207055735588073, 'Final_acc_avg': 0.7827333333333334} \n",
+      "\n",
+      "cifar10--n=10--30%--advanced_free_rider--no_detection:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 3.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 14.472739116350809, 'Final_acc_avg': 0.6746333333333334} \n",
+      "\n",
+      "cifar10--n=10--30%--adaptive--no_detection:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 3.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 14.845909496148428, 'Final_acc_avg': 0.7821666666666666} \n",
+      "\n",
+      "cifar10--n=100--30%--random_weights--no_detection:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 30.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 18.835567198197047, 'Final_acc_avg': 0.14803333333333332} \n",
+      "\n",
+      "cifar10--n=100--30%--advanced_delta_weights--no_detection:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 30.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 20.377823913097384, 'Final_acc_avg': 0.7035} \n",
+      "\n",
+      "cifar10--n=100--30%--advanced_free_rider--no_detection:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 30.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 25.13988130291303, 'Final_acc_avg': 0.11083333333333334} \n",
+      "\n",
+      "cifar10--n=100--30%--adaptive--no_detection:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 30.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 28.427153676748276, 'Final_acc_avg': 0.7026666666666667} \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = DatasetNames.cifar10\n",
     "n_clients = [10, 100]\n",
@@ -438,10 +469,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e4611d41",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cifar10--n=10--0%--no_attack--delta_dagmm:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 17.355650838216146, 'Final_acc_avg': 0.8077666666666667} \n",
+      "\n",
+      "cifar10--n=10--0%--no_attack--rffl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 17.72415406703949, 'Final_acc_avg': 0.8043666666666667} \n",
+      "\n",
+      "cifar10--n=10--0%--no_attack--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.3333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 17.24144670963287, 'Final_acc_avg': 0.8051} \n",
+      "\n",
+      "cifar10--n=10--0%--no_attack--viceroy:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 18.287866814931235, 'Final_acc_avg': 0.8099333333333334} \n",
+      "\n",
+      "cifar10--n=10--0%--no_attack--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 4.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 17.37889250119527, 'Final_acc_avg': 0.7918666666666666} \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = DatasetNames.cifar10\n",
     "n_clients = [10]\n",
@@ -454,10 +507,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a7f975f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cifar10--n=100--0%--no_attack--delta_dagmm:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 1.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 21.659704389174777, 'Final_acc_avg': 0.7108666666666666} \n",
+      "\n",
+      "cifar10--n=100--0%--no_attack--rffl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 24.081753265857696, 'Final_acc_avg': 0.7068666666666666} \n",
+      "\n",
+      "cifar10--n=100--0%--no_attack--fgfl:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 19.333333333333332, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 19.492140644788744, 'Final_acc_avg': 0.7034666666666666} \n",
+      "\n",
+      "cifar10--n=100--0%--no_attack--viceroy:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 35.24374766548475, 'Final_acc_avg': 0.7108} \n",
+      "\n",
+      "cifar10--n=100--0%--no_attack--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 5.666666666666667, 'FN_avg': 0.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 21.93803909023603, 'Final_acc_avg': 0.7125333333333334} \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = DatasetNames.cifar10\n",
     "n_clients = [100]\n",
@@ -1429,10 +1504,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "18212a55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cifar10--n=10--10%--random_weights--wef:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.48161160742419656, 'Time_per_iteration_avg': 15.993499088287352, 'Final_acc_avg': 0.8104} \n",
+      "\n",
+      "cifar10--n=10--10%--advanced_delta_weights--wef:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.5364706176798784, 'Time_per_iteration_avg': 15.999587984879811, 'Final_acc_avg': 0.8033666666666667} \n",
+      "\n",
+      "cifar10--n=10--10%--advanced_free_rider--wef:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.5259338882714611, 'Time_per_iteration_avg': 16.128350631395975, 'Final_acc_avg': 0.8042666666666666} \n",
+      "\n",
+      "cifar10--n=10--10%--adaptive--wef:\n",
+      " {'TP_avg': 1.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.5371855427152302, 'Time_per_iteration_avg': 16.235665353139243, 'Final_acc_avg': 0.8028666666666666} \n",
+      "\n",
+      "cifar10--n=10--30%--random_weights--wef:\n",
+      " {'TP_avg': 2.6666666666666665, 'FP_avg': 1.6666666666666667, 'FN_avg': 0.3333333333333333, 'Precision_avg': 0.6166666666666667, 'Recall_avg': 0.8888888888888888, 'Effectiveness_avg': -6.2826147981239515, 'Time_per_iteration_avg': 13.703523723284404, 'Final_acc_avg': 0.26026666666666665} \n",
+      "\n",
+      "cifar10--n=10--30%--advanced_delta_weights--wef:\n",
+      " {'TP_avg': 2.3333333333333335, 'FP_avg': 0.0, 'FN_avg': 0.6666666666666666, 'Precision_avg': 1.0, 'Recall_avg': 0.7777777777777777, 'Effectiveness_avg': 0.4270339271192077, 'Time_per_iteration_avg': 13.821996541817983, 'Final_acc_avg': 0.7852666666666668} \n",
+      "\n",
+      "cifar10--n=10--30%--advanced_free_rider--wef:\n",
+      " {'TP_avg': 3.0, 'FP_avg': 2.0, 'FN_avg': 0.0, 'Precision_avg': 0.7083333333333334, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.4691480500720313, 'Time_per_iteration_avg': 14.296520102024077, 'Final_acc_avg': 0.7002} \n",
+      "\n",
+      "cifar10--n=10--30%--adaptive--wef:\n",
+      " {'TP_avg': 3.0, 'FP_avg': 0.0, 'FN_avg': 0.0, 'Precision_avg': 1.0, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.4221638444363223, 'Time_per_iteration_avg': 14.685144027074179, 'Final_acc_avg': 0.7853666666666667} \n",
+      "\n",
+      "cifar10--n=10--70%--random_weights--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 2.6666666666666665, 'FN_avg': 7.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 10.291520218054453, 'Final_acc_avg': 0.10000000000000002} \n",
+      "\n",
+      "cifar10--n=10--70%--advanced_delta_weights--wef:\n",
+      " {'TP_avg': 0.3333333333333333, 'FP_avg': 1.3333333333333333, 'FN_avg': 6.666666666666667, 'Precision_avg': 0.1111111111111111, 'Recall_avg': 0.047619047619047616, 'Effectiveness_avg': 0.008638137335859207, 'Time_per_iteration_avg': 10.630671966075896, 'Final_acc_avg': 0.6365} \n",
+      "\n",
+      "cifar10--n=10--70%--advanced_free_rider--wef:\n",
+      " {'TP_avg': 0.3333333333333333, 'FP_avg': 3.0, 'FN_avg': 6.666666666666667, 'Precision_avg': 0.08333333333333333, 'Recall_avg': 0.047619047619047616, 'Effectiveness_avg': 0.14625850340136062, 'Time_per_iteration_avg': 11.664494347572328, 'Final_acc_avg': 0.09806666666666668} \n",
+      "\n",
+      "cifar10--n=10--70%--adaptive--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 2.3333333333333335, 'FN_avg': 7.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 12.335320496559143, 'Final_acc_avg': 0.6492} \n",
+      "\n",
+      "cifar10--n=100--10%--random_weights--wef:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 10.0, 'FN_avg': 0.0, 'Precision_avg': 0.5023923444976076, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.6412606419075226, 'Time_per_iteration_avg': 20.621354502439498, 'Final_acc_avg': 0.5236333333333333} \n",
+      "\n",
+      "cifar10--n=100--10%--advanced_delta_weights--wef:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 2.0, 'FN_avg': 0.0, 'Precision_avg': 0.8333333333333334, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8359078332548368, 'Time_per_iteration_avg': 21.235159641504286, 'Final_acc_avg': 0.7121666666666666} \n",
+      "\n",
+      "cifar10--n=100--10%--advanced_free_rider--wef:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 1.0, 'FN_avg': 0.0, 'Precision_avg': 0.914141414141414, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8345603829893888, 'Time_per_iteration_avg': 22.835963505506516, 'Final_acc_avg': 0.7091333333333333} \n",
+      "\n",
+      "cifar10--n=100--10%--adaptive--wef:\n",
+      " {'TP_avg': 10.0, 'FP_avg': 4.333333333333333, 'FN_avg': 0.0, 'Precision_avg': 0.7008547008547009, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8266936563806052, 'Time_per_iteration_avg': 23.842041623592376, 'Final_acc_avg': 0.7097333333333333} \n",
+      "\n",
+      "cifar10--n=100--30%--random_weights--wef:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 17.0, 'FN_avg': 0.0, 'Precision_avg': 0.6479511426319937, 'Recall_avg': 1.0, 'Effectiveness_avg': -8.697084383049088, 'Time_per_iteration_avg': 18.287474368015925, 'Final_acc_avg': 0.1341} \n",
+      "\n",
+      "cifar10--n=100--30%--advanced_delta_weights--wef:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 20.333333333333332, 'FN_avg': 0.0, 'Precision_avg': 0.5963893249607536, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8620211961536853, 'Time_per_iteration_avg': 19.807271510362625, 'Final_acc_avg': 0.6984333333333334} \n",
+      "\n",
+      "cifar10--n=100--30%--advanced_free_rider--wef:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 29.0, 'FN_avg': 0.0, 'Precision_avg': 0.508864548144465, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8739514680459274, 'Time_per_iteration_avg': 24.589173903067906, 'Final_acc_avg': 0.6987666666666668} \n",
+      "\n",
+      "cifar10--n=100--30%--adaptive--wef:\n",
+      " {'TP_avg': 30.0, 'FP_avg': 20.333333333333332, 'FN_avg': 0.0, 'Precision_avg': 0.5963893249607536, 'Recall_avg': 1.0, 'Effectiveness_avg': 0.8722421662047409, 'Time_per_iteration_avg': 27.892205343643823, 'Final_acc_avg': 0.7005} \n",
+      "\n",
+      "cifar10--n=100--70%--random_weights--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 15.0, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 13.93473156094551, 'Final_acc_avg': 0.10000000000000002} \n",
+      "\n",
+      "cifar10--n=100--70%--advanced_delta_weights--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 30.0, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 18.35528402129809, 'Final_acc_avg': 0.5617} \n",
+      "\n",
+      "cifar10--n=100--70%--advanced_free_rider--wef:\n",
+      " {'TP_avg': 1.3333333333333333, 'FP_avg': 30.0, 'FN_avg': 68.66666666666667, 'Precision_avg': 0.0392156862745098, 'Recall_avg': 0.019047619047619046, 'Effectiveness_avg': 0.002150537634408579, 'Time_per_iteration_avg': 29.234768054882682, 'Final_acc_avg': 0.10000000000000002} \n",
+      "\n",
+      "cifar10--n=100--70%--adaptive--wef:\n",
+      " {'TP_avg': 0.0, 'FP_avg': 30.0, 'FN_avg': 70.0, 'Precision_avg': 0.0, 'Recall_avg': 0.0, 'Effectiveness_avg': 0.0, 'Time_per_iteration_avg': 36.973021860917406, 'Final_acc_avg': 0.35013333333333335} \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = DatasetNames.cifar10\n",
     "n_clients = [10, 100]\n",
