--- a/generate_config.ipynb
+++ b/generate_config.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "0a683968",
    "metadata": {},
    "outputs": [
@@ -23,9 +23,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the detection method:  no_detection\n",
-      "Selected 0 malicious clients out of 100\n",
-      "Malicious client IDs: []\n",
+      "Using the detection method:  viceroy\n",
+      "Selected 70 malicious clients out of 100\n",
+      "Malicious client IDs: [0, 2, 3, 4, 5, 6, 7, 8, 11, 12, 13, 14, 16, 17, 18, 19, 20, 22, 23, 24, 25, 27, 28, 29, 31, 34, 35, 36, 38, 39, 40, 43, 44, 46, 47, 51, 52, 53, 54, 57, 58, 59, 60, 61, 62, 63, 64, 66, 67, 68, 69, 71, 74, 75, 77, 79, 81, 82, 84, 85, 86, 88, 89, 90, 93, 94, 95, 97, 98, 99]\n",
       "num_gpus:  0.041666666666666664\n"
      ]
     }
@@ -43,7 +43,7 @@
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "\n",
     "# Dataset (mnist or cifar10)\n",
-    "DATASET = DatasetNames.cifar10\n",
+    "DATASET = DatasetNames.mnist\n",
     "\n",
     "# Number of clients\n",
     "NUM_CLIENTS = 100\n",
@@ -52,7 +52,7 @@
     "NUM_ROUNDS = 20 if DATASET == DatasetNames.mnist or (DATASET == DatasetNames.cifar10 and NUM_CLIENTS == 10) else 40\n",
     "\n",
     "# Percentage of malicious clients\n",
-    "PERCENT_MALICIOUS = 0.0\n",
+    "PERCENT_MALICIOUS = 0.7\n",
     "\n",
     "# Fraction of the clients to choose for training in one round. We always use 1.0\n",
     "FRACTION_FIT = 1.0\n",
@@ -61,10 +61,10 @@
     "USE_WANDB = False\n",
     "\n",
     "# Attack method to use\n",
-    "ATTACK_METHOD = AttackNames.no_attack\n",
+    "ATTACK_METHOD = AttackNames.adaptive_attack\n",
     "\n",
     "# Detection method to use\n",
-    "DETECTION_METHOD = DetectionNames.no_detection\n",
+    "DETECTION_METHOD = DetectionNames.viceroy_detection\n",
     "\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
     "# --- --- ---   --- --- --- --- ---   --- --- ---\n",
